New Style for the Temporary Landing Page

--- a/index.html
+++ b/index.html
@@ -1,16 +1,40 @@
 <!doctype html>
+<html class="no-js" lang="en">
 
-<html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Visirion</title>
-  <meta name="description" content="Visirion">
+  <meta name="description" content="Visirion - Intelligent Organizations">
   <meta name="author" content="Visirion">
+  <meta name="keywords" content="Measureable Agile, Agile Coach">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:900|Raleway:200" rel="stylesheet">
 </head>
 
 <body>
-  <h1>Visirion</h1>
+  <!--[if lte IE 9]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  <header></header>
+  <section id="welcome-page-container">
+      <p class="title">Visirion</p>
+      <p class="subtitle">Intelligent Organizations</p>
+  </section>
+  <footer></footer>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
+
 </html>
